[package]
edition = "2021"
name = "blog-back-end"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.6.1"
actix-rt = "2.7.0"
actix-web = "4.0.0"
chrono = {version = "0.4.19", features = ["serde"]}
dotenv = "0.15.0"
futures = "0.3"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1"
sqlx = {version = "0.5.10", default_features = false, features = [
  "postgres",
  "runtime-tokio-rustls",
  "macros",
  "chrono",
]}
